--- a/app/views/quotes/index.html.erb
+++ b/app/views/quotes/index.html.erb
@@ -1,10 +1,11 @@
 <main class="container">
   <div class="header">
     <h1>Quotes</h1>
-    <%= link_to "New quote",
-                new_quote_path,
-                class: "btn btn--primary" %>
+    <%= link_to "New quote", new_quote_path, class: "btn btn--primary", data: { turbo_frame: 'new_quote' } %>
   </div>
 
-  <%= render @quotes %>
+  <%= turbo_frame_tag 'new_quote' %>
+  <%= turbo_frame_tag 'quotes' do %>
+    <%= render @quotes %>
+  <% end %>
 </main>
